# STOKECAM

./: .gitignore  README.md  STOKECAM.yaml  config.yaml  focus.sh  inputs.yaml  settings.yaml  testing_cmds.txt  update.sh
CODE/: burst.py  calib.py  numFrames.py  run_burst.sh  run_calib.sh  run_numFrames.sh  run_stereoCAM.sh
CODE/old/: cam_test0.py  cam_test1 copy.py  run_rplidar.sh  run_stereoCAM copy.sh  update.sh
VNSDK_0.15.1/cpp/: CMakeLists.txt
docs/: stereo_cam_BOM_updated_20240708.xlsx  stereo_cam_BOM_updated_20240710.xlsx  stereo_cam_BOM_updated_20240731.xlsx  stereo_cam_BOM_updated_20240813.xlsx  stereo_cam_BOM_updated_20251002.xlsx
docs/old/: stereo_cam_BOM_updated_20240127 - Copy.xlsx
notebooks/: train-yolov12-object-detection-model.ipynb
post_processing/: A_calibrate.m  B_rectify.m  C_gen_ptClouds.m  D_view_ptClouds.m  E_clean_ptClouds.m  WasteManagement.asv  WasteManagement.m  WaveClipper.m  calib.mat  calibrate.m  rectify.asv  rectify.m  test.asv  test.m  view_ptClouds.asv
post_processing/MATLAB/: 0_calibrate.m  A_Calibrate.m  A_ClipWaves.asv  A_ClipWaves.m  A_WasteMgmt.m  A_WaveClipper.m  B_ClipWaves.m  B_ProcessLevel1.asv  B_ProcessLevel1.m  B_Rectify.m  B_WaveClipper.m  B_rectify.m  B_uncal_rectify.m  C_CleanPtClouds.asv  C_CleanPtClouds.m  C_ProcessLevel1.asv  C_ProcessLevel1.m  C_ProcessLevel2.m  C_ViewPtClouds.m  C_gen_ptClouds.m  CleanPtClouds.m  Copy_of_E_Analyze.m  Copy_of_superGlue.m  D_CleanPtClouds.asv  D_CleanPtClouds.m  D_ProcessLevel2.asv  D_ProcessLevel2.m  D_ViewPtClouds.m  E_Analyze.asv  E_Analyze.m  E_Analyze_v2.m  E_Analyze_v3.asv  E_Analyze_v3.m  E_Analyze_v4.asv  E_Analyze_v4.m  (+20 more)
run_cam/: IMU.py  OLDmaster.py  VN_test.py  array_test.py  buffer_test.py  burst.py  calib.py  cam_test0.py  cap0.py  cap1.py  capture0.py  capture1.py  close_GPIO.py  double_triggert_test.py  drift_test.py  hard_trigger.py  imu copy.py  imu.py  imu2.py  latency_test.py  lights_test.py  master.py  master_multiProc.py  master_tmp.py  master_v1.py  numFrames.py  old_burst.py  pwm_test.py  run_burst.sh  run_calib.sh  run_imu.py  run_numFrames.sh  settings.py  single_trigger_test.py  standby.py  startup.py  stoke.py  stop_imu.py  sub_lights.py  test.py  (+9 more)
run_cam/run_imu/cli/src/: AssemblyInfo.cpp  CMakeLists.txt
run_files/: run_stereoCAM.sh
run_imu/: test.py
vectornav/: LICENSE.txt  changelog.txt
(+3098 files in other folders)
